# setup

./: .gitignore  README.md  bootstrap.sh  install-dots.sh  install-tools.sh  lib.sh  setup.sh  upgrade-tools.sh
dot.Frodo.d/: .Xdefaults  .xmobarrc  .xsession
dot.Frodo.d/.xmonad/: init.sh
dot.d/: .Xdefaults  .bash_aliases  .gitconfig  .stalonetrayrc  .tmux.conf  .xmobarrc  .xsession  .zshrc  .zshrc.nvm
dot.d/.config/feather/: feather.yaml
dot.d/.config/nvim/: init.vim
dot.d/.weechat/: aspell.conf  weechat.conf
dot.d/.xmonad/: build  init.lock.sh  init.sh  xmonad.hs
dot.host.Bilbo.d/: .stalonetrayrc
dot.host.Frodo.d/: .stalonetrayrc
dot.host.Frodo.d/.xmonad/: init.monitors.sh
dot.host.Samwise.d/: .stalonetrayrc
dot.host.willcoster.d/: .stalonetrayrc
dot.host.willcoster.d/.xmonad/: init.lock.settings.sh  init.monitors.sh
dot.tag.-tui.d/: .xsession
dot.tag.-tui.d/.xmonad/: init.irc.sh  init.lock.sh  my-xmonad.cabal
dot.tag.-work.d/.config/feather/: feather.yaml
dot.willcoster.d/: .stalonetrayrc
install-tools.d/: 00_docker-machine.sh  00_google-chrome.sh  00_neovim.sh  00_oh-my-zsh.sh  00_powerline-fonts.sh  00_stack.sh  00_tarsnap.sh  00_tpm.sh  00_virtualenv-pwn.sh  00_vs-code.sh  00_wee-slack.sh  10_feather.sh  10_fzf.sh  10_ghc.sh  10_neovim-plugged.sh  10_nvm.sh  10_pwndbg.sh  10_virtualenv-pwntools.sh  10_virtualenv-vmlinux-to-elf.sh  10_xmonad.sh  20_compton.sh  99_borgbackup.sh  99_misc-ctf-tools.sh  99_misc-gui-tools.sh  99_misc-tools.sh  99_misc-tui-tools.sh
setup.d/: 00_github.sh
tags.d/: willcoster
