name:          my-xmonad
version:       1
license:       Apache
author:        willcoster
build-type:    Simple
cabal-version: >=1.10

executable my-xmonad
  main-is: ./xmonad.hs
  build-depends:
      base
    , containers
    , process
    , xmonad         >= 0.13 && < 0.14
    , xmonad-contrib >= 0.13 && < 0.14
